Post request for basic info
- added post request endpoint for basic info
