# Services/StudentService/src/app.js
@@ -38,6 +38,8 @@ app.get('/v0/user/honors', auth.check, user.honors);
 app.get('/v0/user/parents', auth.check, user.parents);
 app.get('/v0/student/basicInfo', auth.check, student.getBasicStudentInfo);
 app.get('/v0/student/expandInfo/:uuid', auth.check, student.getExpandStudentInfo);
+app.post('/v0/student/basicInfo', auth.check, student.addBasicStudentInfo);
+
 
 app.use((err, req, res, next) => {
   const statusCode = err.status || 500;
